# shader-pipe

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: shader_pipe.hpp
src/: main.cpp  shader_pipe.cpp
